Fix: Assignmets page header overflow fixed. Refractor: Assignmets page header renamed to assignments-header

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,6 +9,7 @@
   z-index: 30;
   width: 100%;
   box-sizing: border-box;
+  justify-content: space-between;
 }
 
 .search-container {
